--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,11 @@ svg {
 }
 
 body {
-  width: 100%;
+  max-width: 100vw;
   color: var(--text);
   font-family: 'Roboto Mono', monospace;
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 .d-flex {
@@ -56,7 +57,7 @@ body {
 header {
   position: fixed;
   background-color: var(--soft-purple);
-  width: 100%;
+  width: 100vw;
   height: 48px;
   align-items: center;
   z-index: 4;
@@ -94,6 +95,7 @@ header {
   font-size: 40px;
   line-height: 52px;
   animation: heading 2s 1 alternate;
+  z-index: 2;
 }
 
 .main-description {
@@ -103,6 +105,7 @@ header {
   margin: 12px 0;
   width: 100%;
   animation: heading 4s 1 alternate;
+  z-index: 2;
 }
 
 .desktop-icons {
@@ -110,12 +113,13 @@ header {
 }
 
 .main-wrapper {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
-  padding: 0 50px;
+  padding: 100px 50px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 #main-illustration {
@@ -132,13 +136,14 @@ header {
   color: var(--main-purple);
   font-weight: 600;
   animation: heading 2s 1 alternate;
+  z-index: 2;
 }
 
 .main {
-  position: static;
+  position: relative;
   flex-direction: column;
   padding: 100px 0 0 0;
-  z-index: 3;
+  z-index: 2;
 }
 
 .alert {
@@ -149,6 +154,8 @@ header {
   color: var(--text);
   padding: 5px 10px;
   left: 0;
+  z-index: 3;
+  font-size: 0.8rem;
 }
 
 .stack::before,
@@ -272,7 +279,6 @@ header {
 }
 
 .sub-desc {
-  /* padding: 10px 20px; */
   flex-wrap: wrap;
   align-items: center;
   width: 100%;
@@ -300,8 +306,6 @@ header {
   align-items: center;
   gap: 8px;
   padding: 12px 0;
-
-  /* width: 100%; */
 }
 
 .lang {
@@ -350,8 +354,6 @@ header {
   width: 100%;
   flex-direction: column;
   justify-content: center;
-
-  /* padding: 114px 0 113px 0; */
 }
 
 .title {
@@ -390,14 +392,15 @@ header {
 
 #circle {
   position: absolute;
-  right: -100px;
-  top: 0;
+  right: -150px;
+  top: -100px;
   opacity: 0.4;
   width: 400px;
   height: 400px;
   border-radius: 100%;
   background-color: var(--main-purple);
   z-index: 1;
+  overflow: hidden;
 }
 
 /* Collapsible menu */
